# doc-rag-backend

./: dependency.py  doc.db  main.py  pyproject.toml  render.yaml  requirements.txt
ingestion/: embeddings.py  ingestion.py  retrieval.py  vector_store.py
models/: user_model.py
prompts/: prompts.py
router/: file_upload.py  user_router.py
schema/: request_schema.py
utils/auth/: auth.py
